# projects

2014-mini-smart-vehicles/: .gitignore  README.md
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/: readme.txt
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/Image_Substraction/: image  image_comparison.cpp  imagedata.txt
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/apps/2014/: CMakeLists.txt
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/: CMakeLists.txt
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/proxy-STM32F4/: .gitignore  CMakeLists.txt  Data.proto
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/proxy-STM32F4/include/: STM32F4Tester3.h
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/proxy-STM32F4/src/: STM32F4Protocol.cpp  STM32F4Tester3.cpp
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/hesperia/cockpit/: cockpit_de_DE.ts
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/OpenDaVINCI-msv/supercomponent/: configuration
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/STM32F4/embedded/ChibiOS/ChibiOS_2.6.0/: readme.txt
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/sensors_data_Test/: SensorsTest.cpp  Sensorsdata.txt  sensors
2014-mini-smart-vehicles/2014-BSc-SimRealData/sources/statistics/: statistics.cpp  statistics.h
2014-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/apps/: CMakeLists.txt
2014-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/hesperia/cockpit/: CMakeLists.txt  cockpit_en_US.ts
2014-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/hesperia/irus/: CMakeLists.txt
2014-mini-smart-vehicles/project-template/sources/OpenDaVINCI-msv/libopendavinci/: CMakeLists.txt
2014-mini-smart-vehicles/project-template/sources/STM32F4/embedded/ChibiOS/DiscoveryBoard2/: .gitignore  Makefile  Peripherals.h  main.c
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/: CMakeLists.txt
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/csv-exporter/: CMakeLists.txt
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/apps/2014/DIT-168/project-template/csv-exporter/include/: CSVExporter.h
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/bincreateread/: makedatbin.cpp  picr.cpp  script.sh  sensorr.cpp
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/hesperia/: CMakeLists.txt
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/hesperia/Scenarios/: CenterLines.scnx  NoObstacles_StopLines.scnx  NoTest.scnx
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/hesperia/Scenarios/AuxiliaryInfo/: PointValues.ods
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/hesperia/Scenarios/NoTest/: scenario.scn
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/hesperia/libhesperia/: CMakeLists.txt
2014-mini-smart-vehicles/thesis/sources/OpenDaVINCI-msv/supercomponent/: configuration
2014-mini-smart-vehicles/thesis/sources/STM32F4/embedded/ChibiOS/DiscoveryBoard2/: Makefile  Peripherals.h
2014-mini-smart-vehicles/thesis/sources/STM32F4/host-tools/qstlink2/forms/: dialog.ui
gps/g2g offline map parser/svgparser/: supermarket.txt
gps/g2g offline map parser/svgparser/src/info/: Cleaning.java  Member.java  Methods.java  Relation.java  Vertex.java  Way.java
gps/map/: .classpath  AndroidManifest.xml
gps/map/res/drawable-hdpi/: pop111.xml  pop222.xml  pop333.xml  pop444.xml  pop555.xml  vvback.xml  vvsearch.xml
gps/map/res/layout/: coo.xml  main.xml  menu.xml  splash.xml
gps/map/res/raw/: fuel.txt  hospital.txt  hotel.txt  nav.txt  pub.txt  restaurants.txt  suburbs.txt  vertexes.txt
gps/map/src/sasha/offline/activity/: Dijkstra.java  Drawing.java  MapActivity.java  Nav.java
gps/map/src/sasha/offline/info/: Edge.java  Node.java  Tag.java  Vertex.java  Way.java
gps/svgparser/: .project  cafes.txt  edges.txt  fastfood.txt
gps/svgparser/src/info/: Edge.java  Nd.java  Node.java  Tag.java
(+58 files in other folders)
